fixed footer spacing for desktop res

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -358,7 +358,7 @@ a:focus {
 	padding-top: 60px;
 	padding-bottom: 60px;
 	background: #384452;
-	height: 280px;
+	height: 300px;
 	position: relative;
 }
 
